fixed some bugs still need a last update

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Mark Zuckerberg Tribute Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+
     <link
     rel="stylesheet"
     href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
@@ -37,7 +36,7 @@
 
   <div class="w3-top">
      <ul class="w3-navbar" id="myNavbar">
-       <li><a href="#" class="w3-padding-large"><Mark></Mark> Zuckerberg</a></li>
+       <li><a href="#" class="w3-padding-large">Home</a></li>
          <li class="w3-hide-small w3-right">
          <a href="#more" class="w3-padding-large">More</a>
        </li>
@@ -53,8 +52,7 @@
      </ul>
   </div>
 
-
-  <main id="main">
+  <body>
    <div id="container">
     <header>
        <div id="effect">
@@ -65,7 +63,8 @@
            <i class="fa fa-angle-down fa-2x" aria-hidden="true"></i> 
        </div>
     </header>
-
+   </div>
+   
     <div>
       <div id="contained">
        <div id="about">
@@ -117,7 +116,7 @@
            <time>Jun 14, 2004</time>
            <strong>Drops out of Harvard</strong> 
              <p>Now that Facebook is becoming popular, Mark drops out of school and moves to California to chase his Facebook dream.</p>
-    </p    
+         </p>   
           </div>
        </li>
        <li>
@@ -146,22 +145,30 @@
            <time>May 19, 2012</time> <p>He got married with Priscilla Chan</p>
          </div>
        </li>
+      </ul> 
+      </section>
+  </body>
 
-
-   <footer style=" font-family: 'Raleway', sans-serif;"class="w3-container w3-dark-grey w3-hover-black w3-padding-48 w3-center">Simon	<h3 id="more" style="color: white">more information on <a href="https://en.wikipedia.org/wiki/Mark_Zuckerberg" target="_blank">Wikipedia entry</a>.</h3> 
-      <div>
-            <a target="_blank" href="https://www.freecodecamp.org/gonzalosimon">
-              <i class="fa fa-fire fa-2x"></i>
-            </a>
-            <a target="_blank" href="https://codepen.io/gonzalo-simon/">
-              <i class="fa fa-codepen fa-2x"></i>
-            </a>
-            <a href="" target="_blank">
-              <i class="fa fa-linkedin fa-2x"></i>
-            </a>
-            <a target="_blank" href="https://github.com/gb-simon/">
-              <i class="fa fa-github fa-2x"></i>
-            </a>
-      </div>
-    </footer>    
+  <section class="intro">
+    <div class="w3-container w3-dark-grey w3-hover-black w3-padding-48 w3-center">
+      <h1 id="more">For more information you can check on his <a href="https://en.wikipedia.org/wiki/Mark_Zuckerberg" target="_blank">Wikipedia entry</a>.</h1>      
+    <footer style=" font-family: 'Raleway', sans-serif;"> 
+      <a style="font-size: 20px;">Simon</a>
+        <div> 
+        <a target="_blank" href="https://www.freecodecamp.org/gonzalosimon">
+          <i class="fa fa-fire fa-2x"></i>
+        </a>
+        <a target="_blank" href="https://codepen.io/gonzalo-simon/">
+          <i class="fa fa-codepen fa-2x"></i>
+        </a>
+        <a target="_blank" href="https://www.linkedin.com/in/gonzalo-simon-aguilar/">
+          <i class="fa fa-linkedin fa-2x"></i>
+        </a>
+        <a target="_blank" href="https://github.com/gb-simon/">
+          <i class="fa fa-github fa-2x"></i>
+        </a>
+    </div>
+  </footer>
+  </div>
+  </section>
 </html>
